# spaceship-titanic

./: .gitignore  .sqliterc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
experiments/: README.md  setup_db.py  setup_output_dir.py
experiments/feature-engineering/: original.py  target.py
experiments/feature-engineering/conf/: config.yaml
experiments/modeling/: lgbm_00.py
experiments/modeling/conf/: config.yaml
experiments/modeling/conf/cv/: kfold.yaml
experiments/modeling/conf/feature/: feat00.yaml
experiments/modeling/conf/model/: lgbm.yaml
experiments/modeling/utils/: __init__.py
mylib/: log.py
mylib/data/: __init__.py  split.py
mylib/db/: __init__.py  _query.py  core.py
mylib/features/creation/: base.py  original.py  target.py
mylib/features/featuresets/: __init__.py
mylib/train/gbdt/: __init__.py  _callbacks.py  lightgbm.py
mylib/transformer/: __init__.py
notebooks/: 00-data.ipynb  01-eda.ipynb  02-modeling.ipynb  03-modeling.ipynb
scripts/: mlflow.sh  sqlite.sh
